--- a/config/AASIST_LARGE.conf
+++ b/config/AASIST_LARGE.conf
@@ -1,1 +1,28 @@
-{\n    "train_csv_path": "./train_metadata.csv",\n    "val_csv_path": "./val_metadata.csv",\n    "batch_size": 16,\n    "num_epochs": 100,\n    "model_config": {\n        "architecture": "AASIST_LARGE",\n        "nb_samp": 64600,\n        "first_conv": 256,\n        "filts": [70, [1, 64], [64, 64], [64, 128], [128, 128]],\n        "gat_dims": [128, 64],\n        "pool_ratios": [0.5, 0.7, 0.5, 0.5],\n        "temperatures": [2.0, 2.0, 100.0, 100.0],\n        "attention_heads": 8\n    },\n    "train_config": {\n        "num_gpus": 2,\n        "mixed_precision": true,\n        "grad_clip": 3.0,\n        "gradient_accumulation_steps": 2\n    }\n}
+{
+    "train_csv_path": "./train_metadata.csv",
+    "val_csv_path": "./val_metadata.csv",
+    "batch_size": 16,
+    "num_epochs": 100,
+    "model_config": {
+        "architecture": "AASIST_LARGE",
+        "nb_samp": 64600,
+        "first_conv": 256,
+        "filts": [
+            70,
+            [1, 64],
+            [64, 64],
+            [64, 128],
+            [128, 128]
+        ],
+        "gat_dims": [128, 64],
+        "pool_ratios": [0.5, 0.7, 0.5, 0.5],
+        "temperatures": [2.0, 2.0, 100.0, 100.0],
+        "attention_heads": 8
+    },
+    "train_config": {
+        "num_gpus": 2,
+        "mixed_precision": true,
+        "grad_clip": 3.0,
+        "gradient_accumulation_steps": 2
+    }
+}
